# ADK_esp32

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
exceptions/: sdkconfig
main/: ADK.cpp  CMakeLists.txt  Kconfig.projbuild  My_server.h  Traffic_lights.h  connect_wifi.cpp  enc28j60_example_main.cpp  global.h
